[gd_scene load_steps=4 format=3 uid="uid://cc5d0smjdti43"]

[ext_resource type="Script" path="res://src/player/signal method/head_segment.gd" id="1_uqkxe"]
[ext_resource type="Texture2D" uid="uid://b1a67uw6hhvvd" path="res://assets/head segment.png" id="2_sj75w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3afk"]
size = Vector2(32, 32)

[node name="HeadSegment" type="Area2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_uqkxe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sj75w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x3afk")

[node name="WallDetector" type="RayCast2D" parent="."]

[node name="WalkSpeedTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="WalkSpeedTimer" to="." method="_on_walk_speed_timer_timeout"]
